RESOLVED FIXED 263405
@supports selector(:popover-open) does not work to detect disabled state
https://bugs.webkit.org/show_bug.cgi?id=263405
Summary @supports selector(:popover-open) does not work to detect disabled state
Tim Nguyen (:ntim)
Reported 2023-10-19 14:03:08 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-19 14:43:21 PDT
Tim Nguyen (:ntim)
Comment 2 2023-10-19 14:45:52 PDT
EWS
Comment 3 2023-10-20 07:11:38 PDT
Committed 269565@main (d544e51a1947): <https://commits.webkit.org/269565@main> Reviewed commits have been landed. Closing PR #19310 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.