[popover] @supports selector(:popover-open) does not reflect disabled preference https://bugs.webkit.org/show_bug.cgi?id=263405 rdar://117226626

Reviewed by Simon Fraser.

* LayoutTests/fast/selectors/popover-open-disabled-expected.html: Added.
* LayoutTests/fast/selectors/popover-open-disabled.html: Added.
* Source/WebCore/css/parser/CSSParserContext.cpp:
(WebCore::CSSParserContext::CSSParserContext):
(WebCore::add):
* Source/WebCore/css/parser/CSSParserContext.h:
* Source/WebCore/css/parser/CSSSelectorParser.cpp:
(WebCore::CSSSelectorParserContext::CSSSelectorParserContext):
(WebCore::CSSSelectorParser::consumePseudo):
* Source/WebCore/css/parser/CSSSelectorParser.h:

Canonical link: https://commits.webkit.org/269565@main